# SingleStockPredict

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: config.yaml  model_config.yaml
scripts/: run_backtest.py  run_pipeline.py  run_train.py
src/backtest/: engine.py  metrics.py
src/data/: downloader.py  loader.py
src/features/: market.py  multi_period.py  pipeline.py  price_pattern.py  technical.py
src/features/alpha/: alpha101.py  builder.py  ops.py  registry.py
src/labels/: builder.py
src/models/: base.py  lgbm_model.py  lstm_model.py  xgb_model.py
src/training/: cross_val.py  trainer.py
src/utils/: logger.py  plot.py
tests/: test_features.py  test_labels.py
