[project]
name = "single-stock-predict"
version = "0.1.0"
description = "多周期单只股票未来三日涨跌预测"
requires-python = ">=3.12"
dependencies = [
    "baostock>=0.8.8",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
dev   = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ipykernel>=6.25.0"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
